--- a/MavenClock/pom.xml
+++ b/MavenClock/pom.xml
@@ -3,4 +3,8 @@
   <groupId>Skolprojekt_Arbetsmetodik</groupId>
   <artifactId>MavenClock</artifactId>
   <version>0.0.1-SNAPSHOT</version>
-</project>
+  <properties>
+   <maven.compiler.source>1.8</maven.compiler.source>
+   <maven.compiler.target>1.8</maven.compiler.target>
+</properties> 
+</project> 
